adding first journal week

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -72,8 +72,14 @@ dfn {
   font-style: italic;
 }
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+  font-size: 30px;
+  color:#1B202B;
+  font-weight:400;
+}
+p {
+  font-size:18px;
+  color:#626D83;
+  line-height: 1.7;
 }
 mark {
   background-color: #ff0;
