--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -257,6 +257,7 @@ p.projectheading {
   color: #626d83;
   letter-spacing: 1.5px;
   text-transform: uppercase;
+  line-height: 0;
 }
 
 p.projectdescription {
